[gd_scene load_steps=19 format=2]

[ext_resource path="res://gui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/RobotY.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menu.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/choose.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/select.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=14]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.168627, 0.180392, 0.231373, 1 )
draw_center = true
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.780392, 0.796078, 0.764706, 1 )
border_blend = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 8
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_color = Color( 0.375, 0.372105, 0.341309, 0.0552549 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 4
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="DynamicFont" id=15]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 34
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 34
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=6]

resource_name = "ContinueSelected"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Panel/continue:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.780392, 0.796078, 0.764706, 1 ), Color( 0.788235, 0.521569, 0.25098, 1 ), Color( 0.780392, 0.796078, 0.764706, 1 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "ContinueUnselected"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Panel/continue:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.788235, 0.521569, 0.25098, 1 ), Color( 0.654902, 0.698039, 0.643137, 1 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "ExitSelected"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Panel/exit:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.780392, 0.796078, 0.764706, 1 ), Color( 0.788235, 0.521569, 0.25098, 1 ), Color( 0.780392, 0.796078, 0.764706, 1 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "ExitUnselected"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Panel/exit:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.788235, 0.521569, 0.25098, 1 ), Color( 0.654902, 0.698039, 0.643137, 1 ) ]
}

[sub_resource type="Animation" id=12]

resource_name = "FlashContinue"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Panel/continue:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.654902, 0.698039, 0.643137, 1 ), Color( 0.262745, 0.431373, 0.596078, 1 ), Color( 0.654902, 0.698039, 0.643137, 1 ) ]
}

[sub_resource type="Animation" id=13]

resource_name = "FlashExit"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Panel/exit:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.654902, 0.698039, 0.643137, 1 ), Color( 0.262745, 0.431373, 0.596078, 1 ), Color( 0.654902, 0.698039, 0.643137, 1 ) ]
}

[sub_resource type="Animation" id=10]

resource_name = "HideMenu"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.909804 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]

resource_name = "ShowMenu"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.911608 ) ]
}

[node name="pause_menu" type="Container" index="0"]

visible = false
modulate = Color( 1, 1, 1, 0.909804 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Focus", "Mouse", "Size Flags", "Theme", "Visibility" ]

[node name="CenterContainer" type="PanelContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 2 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "custom_styles" ]

[node name="Panel" type="Panel" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 350.0
margin_bottom = 280.0
rect_min_size = Vector2( 350, 280 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 14 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "custom_styles" ]

[node name="title" type="Label" parent="CenterContainer/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = -10.0
margin_right = 366.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.764706, 1 )
text = "MENU"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_colors", "custom_fonts" ]

[node name="continue" type="Label" parent="CenterContainer/Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 210.0
margin_right = 426.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.784748, 0.643612, 0.479375, 1 )
text = "continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_colors", "custom_fonts" ]

[node name="exit" type="Label" parent="CenterContainer/Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 250.0
margin_right = 218.0
margin_bottom = 352.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.764706, 1 )
text = "exit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_colors", "custom_fonts" ]

[node name="anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ContinueSelected = SubResource( 6 )
anims/ContinueUnselected = SubResource( 7 )
anims/ExitSelected = SubResource( 8 )
anims/ExitUnselected = SubResource( 9 )
anims/FlashContinue = SubResource( 12 )
anims/FlashExit = SubResource( 13 )
anims/HideMenu = SubResource( 10 )
anims/ShowMenu = SubResource( 11 )
blend_times = [  ]

[node name="menu_sound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="choose_sound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="select_sound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "SFX"


